--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<ul class="nav navbar-nav menu_nav justify-content-center">
 							<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 							<li class="nav-item"><a class="nav-link" onclick="window.location.hash='about';" >About</a></li>
-							<li class="nav-item"><a class="nav-link" href="https://incompetech.com/music/royalty-free/mp3-royaltyfree/Hall%20of%20the%20Mountain%20King.mp3" download>Download The Game</a>
+							<li class="nav-item"><a class="nav-link" href="http://www.mediafire.com/file/u1fsy70yhm1yrc5/Overgrown.msi/file" download>Download The Game</a>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdAYdct3ewZqdLNnKR0wFmg7Me5obCA77IsUjQ-g0X7lpnkmg/viewform" target="_blank" class="primary_btn">Give us feedback</a></li>
@@ -126,7 +126,7 @@
                 <div class="col-lg-6">
                     <div id="about" class="content_text">
 							<h2>
-                                <a href="https://incompetech.com/music/royalty-free/mp3-royaltyfree/Hall%20of%20the%20Mountain%20King.mp3" download>DOWNLOAD IT NOW!</a> <br><br>
+                                <a href="http://www.mediafire.com/file/u1fsy70yhm1yrc5/Overgrown.msi/file" download>DOWNLOAD IT NOW!</a> <br><br>
 							</h2>
 							<p>                              
                                 Overgrown is for <b>two</b> people, who likes puzzle and strategies. <br>
